--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -50,13 +50,13 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Детали</a></li>
-    <?php if($this->task['status'] == 'taken'){?>
+    <?php if($this->task['status'] == 'taken' && $this->currentUser->banned == 0){?>
         <li role="presentation" id="messTab">
             <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
                 Сообщения
-                <?php if($this->unreadAmount){?>
-                    <span id="unreadAmount" class="badge"><?= $this->unreadAmount ?></span>
-                <?php } ?>
+                <span id="unreadAmount" class="badge"<?php if(!$this->unreadAmount){?> style="display:none" <?php } ?>>
+                    <?= $this->unreadAmount ?>
+                    </span>
             </a>
         </li>
     <?php } ?>
@@ -161,7 +161,7 @@
         </div>
         <?php } ?>
     </div>
-      <?php if($this->task['status'] == 'taken'){?>
+      <?php if($this->task['status'] == 'taken' && $this->currentUser->banned == 0){?>
             <div role="tabpanel" class="tab-pane" id="messages" >
                 <?php if($this->taskMessages){?>
                     <div id="messagesArea" style="height: 300px; overflow-y:scroll">
@@ -325,7 +325,7 @@ $(document).ready(function(){
      
     //var n = $('#messagesArea').height();
     $('#messTab').click(function(){
-        $('#messagesArea').animate({ scrollTop: 100000000 }, "slow");
+        $('#messagesArea').animate({ scrollTop: 10000000000 }, "slow");
         markRead();
     });
 
@@ -356,7 +356,17 @@ function checkNewMessages(){
             success: function(response){
                 if(response != 'empty'){
                  var obj = JSON.parse(response);console.log(obj.amount);
-                 $('#unreadAmount').text(obj.amount);
+                 var tabClass = $('#messTab').attr('class');
+                 console.log(tabClass);
+                 if(tabClass == 'active'){
+                     $('#messagesArea').append(obj.messages);
+                     $('#messagesArea').animate({ scrollTop: 10000000000 }, "slow");
+                     markRead();
+                 }else{
+                    $('#unreadAmount').show(100);
+                    $('#unreadAmount').text(obj.amount);
+                    $('#messagesArea').append(obj.messages);
+                 }
                 } 
             }
         });
