--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -130,7 +130,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     </head>
 
 <body >
-    <div class="themeControll">
+<!--    <div class="themeControll">
 <h3 style="width: 60px; font-size: 10px; line-height: 12px;" class="uppercase color-white text-center"> Choose your colour </h3>
 <a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-1.css')" style="background:#4ec67f;border-top: 12px solid #27AE60;"> </a>
 <a onclick="swapStyleSheet(<?= $this->baseUrl() ?>'/assets/css/skin-8.css')" style="background:#3BCA95;border-top: 12px solid #34BC8A"> </a>
@@ -147,7 +147,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
 <br>
  <a style="color:#fff" href="http://codepeoples.com/tanimdesign.net/thsop-v-1.3/index.html"><i class="fa fa-angle-double-left"></i> Theme Chooser </a> </h3>
 <p class="tbtn">  <i class="fa fa-angle-double-left"></i></p>
-</div>
+</div>-->
 
 <!-- /.Modal Login --> 
 
