--- a/application/modules/admin/views/scripts/customers/view.phtml
+++ b/application/modules/admin/views/scripts/customers/view.phtml
@@ -8,14 +8,30 @@
         </div>
         <div class="col-lg-9">
             <div class="col-lg-12">
+                <?php if($this->user['banned'] == 0){?>
+                    <button onclick="bann()" id="bannButton">Забанить</button>
+                    <button onclick="unBann()" id="unbannButton" style="display: none">Разбанить</button>
+                <?php }?>
+                <?php if($this->user['banned'] == 1){?>
+                    <button onclick="bann()" id="bannButton" style="display: none">Забанить</button>
+                    <button onclick="unBann()" id="unbannButton" >Разбанить</button>
+                <?php }?>
+                
+                <button id="halfbunnBut">Полубан</button>
+                <button id="halfbunnBut" style="display: none">Снять полубан</button> 
+            </div>
+            <div class="col-lg-12">
+                               
                 <strong>Возраст :</strong><?= $this->age ?>
             </div>
             <div class="col-lg-12">
-                выпоолнил / создал
+                Создал задач: <?= count($this->tasks); ?>
             </div>
+            <?php if($this->customersRating){?>
             <div class="col-lg-12">
-                рейтинг
+                Рейтинг: <?= $this->customersRating; ?>
             </div>
+            <?php } ?>
         </div>
         <div class="col-lg-12"></div>
         <div class="col-lg-12">
@@ -24,7 +40,7 @@
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Заказы</a></li>
-                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Сообщения</a></li>
+                
                 <li role="presentation"><a href="#private" aria-controls="private" role="tab" data-toggle="tab">Личные данные</a></li>
 
               </ul>
@@ -81,9 +97,7 @@
 
 </script>    
                 </div>
-                <div role="tabpanel" class="tab-pane" id="messages">
-                  Сообщения
-                </div>
+
                 <div role="tabpanel" class="tab-pane" id="private">
                     <div class="col-lg-12">
                         <strong>Номер телефона:</strong> <?= $this->user['phonenumber'] ?>
@@ -106,3 +120,29 @@
     </div>
 </div>
 
+<script>
+    function bann(){
+        var id = '<?= $this->user['id'] ?>';
+$.ajax({
+  type: 'POST',
+  url: '<?= $this->baseUrl.'/admin/performers/bann/'; ?>',
+  data: {id: id},
+  success: function(){
+      $('#bannButton').hide();
+      $('#unbannButton').show();
+  }
+});       
+    }
+    function unBann(){
+    var id = '<?= $this->user['id'] ?>';
+$.ajax({
+  type: 'POST',
+  url: '<?= $this->baseUrl.'/admin/performers/unbann/'; ?>',
+  data: {id: id},
+  success: function(){
+      $('#bannButton').show();
+      $('#unbannButton').hide();
+  }
+});       
+    }    
+</script> 
