--- a/application/modules/admin/views/scripts/performers/view.phtml
+++ b/application/modules/admin/views/scripts/performers/view.phtml
@@ -2,19 +2,54 @@
     <div class="row">
         <div class="col-lg-12">
             <h3><?= $this->user['username'].' '.$this->user['surname'] ?></h3>
+            
         </div>
         <div class="col-lg-3">
             <img src="<?= $this->baseUrl() ?>/images/users_images/<?= $this->user['image'] ?>" width="150px" >
         </div>
         <div class="col-lg-9">
             <div class="col-lg-12">
+                <?php if($this->user['banned'] == 0){?>
+                    <button onclick="bann()" id="bannButton">Забанить</button>
+                    <button onclick="unBann()" id="unbannButton" style="display: none">Разбанить</button>
+                <?php }?>
+                <?php if($this->user['banned'] == 1){?>
+                    <button onclick="bann()" id="bannButton" style="display: none">Забанить</button>
+                    <button onclick="unBann()" id="unbannButton" >Разбанить</button>
+                <?php }?>
+                
+                <button id="halfbunnBut">Полубан</button>
+                <button id="halfbunnBut" style="display: none">Снять полубан</button>
+            </div>
+            <div class="col-lg-12">
                 <strong>Возраст :</strong><?= $this->age ?>
             </div>
             <div class="col-lg-12">
-                выпоолнил / создал
+                <?php if($this->customersTasks){?> 
+                    <div class="product-price"> 
+
+                        <span class="price-sales">
+                            Создано задач:  <?php $customersTasksAmount = count($this->customersTasks); ?>
+                            <?= $customersTasksAmount; ?>
+                        </span>  
+                    </div>
+                <?php } ?>
+                <?php if($this->performersTasks){?> 
+                    <div class="product-price"> 
+                        <span class="price-sales">
+                            Выполнено задач:  <?php $performersTasksAmount = count($this->performersTasks); ?>
+                            <?= $performersTasksAmount; ?>
+                        </span>  
+                    </div>
+                <?php } ?>
             </div>
+            <?php if($this->customersRating){?>
             <div class="col-lg-12">
-                рейтинг
+               Рейтинг исполнителя: <?= $this->customersRating ?>
+            </div>
+            <?php } ?>
+            <div class="col-lg-12">
+               Рейтинг заказчика: <?= $this->performersRating ?>
             </div>
         </div>
         <div class="col-lg-12"></div>
@@ -23,8 +58,9 @@
 
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Заказы</a></li>
-                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Сообщения</a></li>
+                <li role="presentation" class="active"><a href="#orders" aria-controls="orders" role="tab" data-toggle="tab">Задачи</a></li>
+                <li role="presentation" ><a href="#tasks" aria-controls="tasks" role="tab" data-toggle="tab">Созданные задачи</a></li>
+                <li role="presentation"><a href="#feedback" aria-controls="feedback" role="tab" data-toggle="tab">Отзывы</a></li>
                 <li role="presentation"><a href="#private" aria-controls="private" role="tab" data-toggle="tab">Личные данные</a></li>
 
               </ul>
@@ -32,7 +68,7 @@
               <!-- Tab panes -->
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="orders">
-    <?php if(!$this->tasks){?>
+    <?php if(!$this->performersTasks){?>
     <h2>Задач нет</h2>
     <?php }else {?>
 <table id="perTable" class="display" cellspacing="0" width="100%">
@@ -54,12 +90,13 @@
             </tr>
         </tfoot>
         <tbody>
-    <?php foreach($this->tasks as $task){?>
+    <?php foreach($this->performersTasks as $task){?>
             <tr>
                 <td><a href="<?= $this->baseUrl().'/admin/tasks/view/id/'.$task['id'] ?>"><?=  $task['title']?></a></td>
                 <td><?=  date("i:h d.m.y",$task['created_at']) ?></td>
                 <td><?=  $task['status'] ?></td>
                 <td><a href="<?= $this->baseUrl().'/admin/customers/view/id/'.$task['customer_id'] ?>"><?= $task['u_username'].' '.$task['u_surname'] ?></a></td>
+                
                 
             </tr>
 
@@ -70,12 +107,108 @@
 <script>
     $(document).ready(function(){
         $('#perTable').DataTable();
+        $('#feedTable').DataTable();
+        $('#cusTable').DataTable();
     });
 
 </script>    
                 </div>
-                <div role="tabpanel" class="tab-pane" id="messages">
-                  Сообщения
+                <div role="tabpanel" class="tab-pane" id="tasks">
+                <?php if(!$this->customersTasks){?>
+                <h2>Задач нет</h2>
+                <?php }else {?>
+                <table id="cusTable" class="display" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                               <th>Название</th>
+                                <th>Создан</th>
+                                <th>Статус</th>
+                                <th>Заказчик</th>
+                            </tr>
+                        </thead>    
+
+                        <tfoot>
+                            <tr>
+                                <th>Название</th>
+                                <th>Создан</th>
+                                <th>Статус</th>
+                                <th>Заказчик</th>
+                            </tr>
+                        </tfoot>
+                        <tbody>
+                    <?php foreach($this->customersTasks as $task){?>
+                            <tr>
+                                <td><a href="<?= $this->baseUrl().'/admin/tasks/view/id/'.$task['id'] ?>"><?=  $task['title']?></a></td>
+                                <td><?=  date("i:h d.m.y",$task['created_at']) ?></td>
+                                <td><?=  $task['status'] ?></td>
+                                <td><a href="<?= $this->baseUrl().'/admin/performers/view/id/'.$task['customer_id'] ?>"><?= $task['u_username'].' '.$task['u_surname'] ?></a></td>
+
+
+                            </tr>
+
+                    <?php } ?>
+                 </tbody>
+                </table>
+                <?php } ?>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="feedback">
+                <?php if($this->feedbacks){?>
+                    
+                        
+                        <div class="col-sm-12">
+                            <table id="feedTable" class="display" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                   <th>Пользователь</th>
+                                    <th>Отзыв</th>
+                                    <th>Текст</th>
+                                    <th>Дата</th>
+                                </tr>
+                            </thead>    
+
+                            <tfoot>
+                                <tr>
+                                    <th>Пользователь</th>
+                                    <th>Отзыв</th>
+                                    <th>Текст</th>
+                                    <th>Дата</th>
+                                </tr>
+                            </tfoot>
+                            <tbody>
+                        <?php foreach($this->feedbacks as $feedback){?>
+                                <tr>
+                                    <td>
+                                        <?php if($feedback['u_role'] == 'customer'){?>
+                                            <a href="<?= $this->baseUrl().'/admin/performers/view/id/'.$feedback['u_id'] ?>">
+                                        <?php }else if($feedback['u_role'] == 'customer'){?>
+                                            <a href="<?= $this->baseUrl().'/admin/customers/view/id/'.$feedback['u_id'] ?>">
+                                        <?php }?>
+                                        <?= $feedback['u_username'].' '.$feedback['u_surname'] ?>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <?php if($feedback['kind']=='positive'){?>
+                                           Положительный</br>
+                                           Рейтинг: <?= $feedback['rating'] ?>
+                                        <?php }else{?>
+                                           Отрицательный
+                                        <?php } ?> 
+                                    </td>
+                                    <td>
+                                        <?= $feedback['text'] ?>
+                                    </td>
+                                    <td>
+                                        <?= date("h:i d.m.y",$feedback['created']) ?>
+                                    </td>
+                                </tr>
+                        <?php } ?>
+                     </tbody>
+                    </table></div>
+                <?php }else{ ?>
+                    <div class="col-sm-12">
+                        Отзывов пока нет
+                    </div>
+                <?php } ?>    
                 </div>
                 <div role="tabpanel" class="tab-pane" id="private">
                     <div class="col-lg-12">
@@ -98,4 +231,29 @@
         </div>    
     </div>
 </div>
-
+<script>
+    function bann(){
+        var id = '<?= $this->user['id'] ?>';
+$.ajax({
+  type: 'POST',
+  url: '<?= $this->baseUrl.'/admin/performers/bann/'; ?>',
+  data: {id: id},
+  success: function(){
+      $('#bannButton').hide();
+      $('#unbannButton').show();
+  }
+});       
+    }
+    function unBann(){
+    var id = '<?= $this->user['id'] ?>';
+$.ajax({
+  type: 'POST',
+  url: '<?= $this->baseUrl.'/admin/performers/unbann/'; ?>',
+  data: {id: id},
+  success: function(){
+      $('#bannButton').show();
+      $('#unbannButton').hide();
+  }
+});       
+    }    
+</script>    
