--- a/application/modules/admin/views/scripts/layout.phtml
+++ b/application/modules/admin/views/scripts/layout.phtml
@@ -35,6 +35,7 @@
         <nav class="blog-nav">
             
             <a class="blog-nav-item active" href="<?= $this->baseUrl().'/admin/tasks/' ?>">Задачи</a>
+            <a class="blog-nav-item" href="<?= $this->baseUrl().'/admin/messages/' ?>">Сообщения</a>
           <div class="btn-group">
                  <a class="btn dropdown-toggle blog-nav-item" data-toggle="dropdown" href="#">
                      Категории
