--- a/application/modules/admin/views/scripts/layout.phtml
+++ b/application/modules/admin/views/scripts/layout.phtml
@@ -12,7 +12,8 @@
     <script src="<?= $this->baseUrl() ?>/datatable/js/datatable.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="<?= $this->baseUrl() ?>/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/themes/smoothness/jquery-ui.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
     <!-- Custom styles for this template -->
     <link href="<?= $this->baseUrl() ?>/bootstrap/css/blog.css" rel="stylesheet">
     <link href="<?= $this->baseUrl() ?>/datatable/css/datatable.css" rel="stylesheet">
