--- a/application/modules/admin/views/scripts/performers/index.phtml
+++ b/application/modules/admin/views/scripts/performers/index.phtml
@@ -27,7 +27,7 @@
         </tfoot>
         <tbody>
     <?php foreach($this->performers as $performer){?>
-            <tr id="div<?= $performer['id'] ?>" <?php if($performer['banned'] == 1 ){?> class="danger" <?php } ?>>
+            <tr id="div<?= $performer['id'] ?>" <?php if($performer['banned']){?> class="danger" <?php } ?>>
                 <td><a href="<?= $this->baseUrl().'/admin/performers/view/id/'.$performer['id'] ?>"><?=  $performer['username'].' '.$performer['surname'] ?></a></td>
                 <td><?=  $performer['phonenumber'] ?></td>
                 <td><?=  $performer['city'] ?></td>
@@ -35,15 +35,15 @@
                 <td>balans</td>
                 <td>
                      <?php if($performer['banned'] == 0){?>
-                           <button id="bann<?= $performer['id'] ?>" onclick="bann(<?= $performer['id'] ?>)">Забанить</button>
-                           <button id="unbann<?= $performer['id'] ?>" style="display: none" onclick="unBann(<?= $performer['id'] ?>)">Разбанить</button>
+                           <button id="bann<?= $performer['id'] ?>" class="btn btn-primary btn-xs"  onclick="openModal(<?= $performer['id'] ?>)">Забанить</button>
+                           <button id="unbann<?= $performer['id'] ?>" class="btn btn-primary btn-xs" style="display: none" onclick="unBann(<?= $performer['id'] ?>)">Разбанить</button>
                      <?php }else{ ?>
-                           <button id="unbann<?= $performer['id'] ?>" onclick="unBann(<?= $performer['id'] ?>)">Разбанить</button>
-                           <button id="bann<?= $performer['id'] ?>" style="display: none" onclick="bann(<?= $performer['id'] ?>)">Забанить</button>
+                           <button id="unbann<?= $performer['id'] ?>" class="btn btn-primary btn-xs"  onclick="unBann(<?= $performer['id'] ?>)">Разбанить</button>
+                           <button id="bann<?= $performer['id'] ?>" class="btn btn-primary btn-xs" style="display: none" onclick="openModal(<?= $performer['id'] ?>)">Забанить</button>
                      <?php } ?>
                 </td>
                 <td>
-                     <button id="remove<?= $performer['id'] ?>" onclick="removeUser(<?= $performer['id'] ?>)">Удалить</button>
+                     <button id="remove<?= $performer['id'] ?>" class="btn btn-primary btn-xs" onclick="removeUser(<?= $performer['id'] ?>)">Удалить</button>
                      <img style="display: none" id="remPrel<?= $performer['id'] ?>" src="<?= $this->baseUrl()?>/images/blue_preloader.gif" width="50"> 
                 </td>
             </tr>
@@ -52,11 +52,50 @@
  </tbody>
 </table>
 <?php } ?>
+<!-- Modal -->
+<div class="modal fade" id="bannModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Забанить пользователя</h4>
+      </div>
+      <div class="modal-body">
+          <input type="hidden" id="userIdHidden">
+        <input type="text" onchange="enableSubmit()" id="bannDate">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+        <img id="bannPrelModal" src="/images/blue_preloader.gif" width="50" style="display: none">
+        <button type="button" id="modalBannBut" onclick="bann()" disabled class="btn btn-primary">Забанить</button>
+      </div>
+    </div>
+  </div>
+</div>
 <script>
     $(document).ready(function(){
         $('#performersTable').DataTable();
+
     });
-    function removeUser(id){
+    
+function enableSubmit(){
+    if($('#bannDate').val()!=''){
+        $('#modalBannBut').removeAttr('disabled');
+    }
+}    
+    
+    
+$(function() {
+  $( "#bannDate" ).datepicker();
+});
+  
+function openModal(userId){
+    $('#bannModal').modal('show');
+    $('#userIdHidden').val(userId);
+}    
+    
+    
+function removeUser(id){
        
     if(confirm('Вы готовы безвозвратно удалить этого пользователя?')){
         $('#remove'+id).hide();
@@ -72,18 +111,28 @@
 }
     }
     
-    function bann(id){
-$.ajax({
-  type: 'POST',
-  url: '<?= $this->baseUrl.'/admin/performers/bann/'; ?>',
-  data: {id: id},
-  success: function(data){
-      $('#bann'+id).hide();
-      $('#unbann'+id).show();
-      $('#div'+id).addClass('danger');
-  }
-});       
-    }
+function bann(){
+$('#modalBannBut').hide();
+$('#bannPrelModal').show();
+var id = $('#userIdHidden').val();
+var date = $('#bannDate').val();
+    $.ajax({
+      type: 'POST',
+      url: '<?= $this->baseUrl.'/admin/performers/bann/'; ?>',
+      data: {
+          id: id,
+          date: date
+      },
+      success: function(data){
+          $('#bann'+id).hide();
+          $('#unbann'+id).show();
+          $('#div'+id).addClass('danger');
+          $('#bannModal').modal('hide');
+          $('#bannPrelModal').hide();
+          $('#modalBannBut').show();
+      }
+    });       
+}
     function unBann(id){
 $.ajax({
   type: 'POST',
